<resources>
    <string name="app_name">PC Helper</string>


    // LOGIN PAGE
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="loading">Loading…</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebaseui_title_text">PC Helper Login</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="firebaseui_status_fmt">PC Helper User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">PC Helper User: %s</string>


    // forum page
    <string-array name="Type">
        <item>Hardware</item>
        <item>Review</item>
        <item>Technical</item>
        <item>Sales</item>
        <item>Pictures</item>
    </string-array>


    // compatible part
    <string name="proc_prompt">Choose a Processor</string>
    <string name="mobo_prompt">Choose a Motherboard</string>

    <string-array name="proc_arrays">
        <item>AMD Ryzen5 2600</item>
        <item>AMD Ryzen5 3600</item>
        <item>AMD Ryzen7 2700</item>
        <item>AMD Ryzen9 3900X</item>
        <item>Intel i5 9400F</item>
        <item>Intel i7 8700K</item>
    </string-array>

    <string-array name="mobo_arrays">
        <item>MSI B450 TOMAHAWK</item>
        <item>MSI B450M GAMING PLUS</item>
        <item>Gigabyte B450 AORUS M</item>
        <item>ASRock X570M Pro4</item>
        <item>MSI B360m MORTAR</item>
        <item>GIGABYTE Z370</item>
    </string-array>


    // forgot password
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_prompt">Forgot your password?</string>


    // PSU Calculator
    <string name="Country_prompt">Choose a component!</string>

    <string-array name="CPU">
        <item>Intel</item>
        <item>Qualcomm</item>
        <item>NVDIA</item>
        <item>Core i3-2100</item>
        <item>Core3 Duo E7200</item>
    </string-array>

    <string-array name="Motherboard">
        <item>Atx</item>
        <item>SSI CEB</item>
        <item>Micro ATX</item>
        <item>XL ATX</item>
        <item>SSI EEB</item>
    </string-array>

    <string-array name="RAM">
        <item>4GB</item>
        <item>8GB</item>
        <item>16GB</item>
        <item>32GB</item>
        <item>64GB</item>
    </string-array>

    <string-array name="SSD">
        <item>Under 120GB</item>
        <item>120GB-256GB</item>
        <item>256GB-512GB</item>
        <item>512GB- 1T</item>
        <item>2Tb</item>
    </string-array>


    // bottleneck
    <string name="cpu_prompt">Choose a CPU</string>
    <string name="gpu_prompt">Choose a GPU</string>
    <string name="ram_prompt">Choose a Ram</string>

    <string-array name="cpu_arrays">
        <item>Intel core I3 3240</item>
        <item>Intel Core I7 3770k</item>
        <item>Intel Core I9 7990</item>
    </string-array>

    <string-array name="gpu_arrays">
        <item>NVIDIA GeForce 600 Series</item>
        <item>NVIDIA RTX 2000 Series</item>
        <item>NVIDIA Quadro</item>
    </string-array>

    <string-array name="ram_arrays">
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>32</item>
        <item>128</item>
    </string-array>

</resources>
